@@ -1,3 +1,9 @@
+2004-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Fix for bug #1049503 - remove all writes to stdout
+	and stderr and replaced with tk_messageBox or log::log. 
+	log::log debug is the way to record debugging messages.
+
 2004-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Added command-line option for setting the jabber
